# Peerspeak

./: .gitignore  CMakeLists.txt  README.md  resources.c
res/: #peerspeak_ui.glade#  peerspeak.gresources.xml  peerspeak_style.css  peerspeak_ui.glade
src/: audio_handler.cc  audio_handler.h  connection.cc  connection.h  connection_handler.cc  connection_handler.h  connection_info.cc  connection_info.h  main.cc  message.cc  message.h  peerspeak_window.cc  peerspeak_window.h
